# CheonanData

./: clustering_ch.ipynb  dbscan.ipynb  eda_gani.ipynb  location_recommendation.ipynb  main.py  population_eda.ipynb  pyproject.toml  streamlit_app.py
data/: 20240815011746_지역별관광지검색순위_전체_동남구.csv  20240815014930_지역별관광지검색순위_전체_서북구.csv  20240815033035_지역별관광지검색순위_음식_동남구.csv  20240815033110_지역별관광지검색순위_음식_서북구.csv  20240815033740_지역별관광지검색순위_숙박_서북구.csv  20240815033812_지역별관광지검색순위_숙박_동남구.csv  TOTAL_SKT1_CA_SX_AGE_INFLOW_NOPE_MG.csv  TOTAL_SKT1_SX_AGE_FLOW_NOPE_MG.csv  final_merged.csv  fulldata_02_03_01_P_동물병원.csv  fulldata_03_11_02_P_관광펜션업.csv  농림축산식품부_반려동물 미용업 현황_20221231.csv  농림축산식품부_반려동물 운송업 현황_20201230.csv  농림축산식품부_반려동물 장묘업 현황_12_30_2020.csv  농림축산식품부_반려동물 전시업 현황_20221231.csv  충청남도_전국민박펜션업소정보_20230816.csv  한국관광공사 전국 야영장 등록 현황_20240531.csv
pages/: 1_EDA.py  2_Location_recommendation.py
