[tool.poetry]
name = "cheonan"
version = "0.1.0"
description = ""
authors = ["gaonlee <leemil1211@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
